--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 proj1/node_modules
 proj1/package-lock.json
+proj2/node_modules
+proj2/package-lock.json
+proj3/node_modules
+proj3/package-lock.json
