--- a/proj3/docker-compose.yml
+++ b/proj3/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
     db:
-        image: mongo-express:latest
+        image: mongo
         container_name: mongo_c
         # démarrer le conteneur en cas de redémarrage du serveurs
         restart: always
